# TinyNet

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h
TinyNet/: CMakeLists.txt
TinyNet/Include/: Debug.h  TinyNet.h
TinyNet/Source/: Debug.cpp  TinyNet.cpp
